deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
  namespace: fdzamtovski-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - name: spring-app
          image: 'openjdk:17-jdk-slim'
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-volume
              mountPath: /app
          command:
            - java
            - '-jar'
            - /app/kiii-project-0.0.1-SNAPSHOT.jar
          envFrom:  # Add this section for ConfigMap
            - configMapRef:
                name: spring-app-config 
          env:  # Add this section for Secret
            - name: SECRET_USERNAME
              valueFrom:
                secretKeyRef:
                  name: spring-app-secret 
                  key: username
            - name: SECRET_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: spring-app-secret
                  key: password
      volumes:
        - name: app-volume
          emptyDir: {}
