statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: spring-app-statefulset
  namespace: fdzamtovski-namespace
spec:
  serviceName: "spring-app"
  replicas: 3
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
      - name: spring-app
        image: openjdk:17-jdk-slim
        ports:
        - containerPort: 8080
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
